<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.settings.SettingUIActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/pageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="3dp"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/timeText"
            android:layout_toLeftOf="@id/timeText"
            android:lines="1"
            android:text="@string/pagename_login_special"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/arrow_back" />

        <com.RobinNotBad.BiliClient.ui.widget.TextClock
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="3dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_padding_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_login_desc"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/loginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/hint_login_cookies"
                android:minHeight="40dp"
                android:padding="8dp"
                android:text=""
                android:textSize="13sp"
                android:inputType="textMultiLine" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/confirm_text"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_login_confirm"
                    android:textAlignment="textEnd"
                    android:textSize="13sp"
                    app:drawableEndCompat="@drawable/arrow_forward"
                    tools:ignore="RtlCompat" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/refuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_login_refuse"
                    android:textAlignment="textEnd"
                    android:textSize="13sp"
                    app:drawableEndCompat="@drawable/arrow_forward"
                    tools:ignore="RtlCompat" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>