<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.reply.WriteReplyActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/pageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginVertical="3dp"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/timeText"
            android:layout_toLeftOf="@id/timeText"
            android:lines="1"
            android:text="@string/pagename_write_reply"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/arrow_back" />

        <com.RobinNotBad.BiliClient.ui.widget.TextClock
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="3dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_padding_horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:paddingVertical="2dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:hint="@string/hint_write_reply"
                android:minHeight="40dp"
                android:padding="8dp"
                android:textSize="13sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/emote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    app:drawableEndCompat="@drawable/arrow_forward"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_emote"
                    android:textAlignment="textEnd"
                    android:textSize="13sp"
                    android:visibility="visible"
                    tools:ignore="RtlCompat" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    app:drawableEndCompat="@drawable/arrow_forward"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/btn_send"
                    android:textAlignment="textEnd"
                    android:textSize="13sp"
                    android:visibility="visible"
                    tools:ignore="RtlCompat" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>