<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.search.SearchActivity">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/activity_padding_horizontal"
        android:layout_marginVertical="3dp"
        android:paddingVertical="2dp"
        android:background="@drawable/background_searchhistory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchbar"
        tools:itemCount="4"
        tools:listitem="@layout/cell_choose" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top">

        <EditText
            android:id="@+id/keywordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:background="@drawable/background_searchbar"
            android:drawableEnd="@drawable/icon_search"
            android:ems="10"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:minHeight="42dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/search"
            android:layout_width="35dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/keywordInput"
            app:layout_constraintEnd_toEndOf="@+id/keywordInput"
            app:layout_constraintTop_toTopOf="@+id/keywordInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="3dp"
            android:text="@string/pagename_search"
            android:textStyle="bold"
            android:layout_toStartOf="@id/timeText"
            android:layout_toLeftOf="@id/timeText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:drawableStartCompat="@drawable/arrow_down" />

        <com.RobinNotBad.BiliClient.ui.widget.TextClock
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="3dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_tutorial_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/top"
        android:background="#6000"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/tutorial_pager"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top" />

</androidx.constraintlayout.widget.ConstraintLayout>